# multisig

./: .travis.yml  Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: test.yaml
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs
tests/: multisigApprovalTest.ts  multisigCancelTransactionlTest.ts  multisigChangeThresholdTest.ts  multisigCreationTest.ts  multisigExecuteTransactionTest.ts  multisigSetOwnerAndChangeThresholdTest.ts  multisigSetOwnerTest.ts  multisigTransactionAccountTest.ts  mutisigApprovalTest.ts  mutisigCancelTransactionlTest.ts  mutisigCloseTransactionAccountTest.ts  mutisigExecuteTransactionlTest.ts  mutisigSigningTest.ts  mutisigTest.ts  mutisigTransactionAccountTest.ts
tests/keypairs/: default_wallet.json
tests/utils/: before.ts  multisigDsl.ts  solanaDsl.ts
